# video-cutter

./: Cargo.toml  PRD.md  README.md
assets/: dnclip.desktop
debian/: postinst
docs/: index-zh.html  index.html
src/: app.rs  embed.rs  export.rs  main.rs  player.rs  types.rs
