[package]
name = "dnclip"
version = "0.1.0"
edition = "2021"
description = "Video trimmer with mpv preview and DNxHD export"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui-file-dialog = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
raw-window-handle = "0.6"
log = "0.4"
env_logger = "0.11"
x11-dl = "2"
