[package]
name = "dnclip"
version = "0.1.0"
edition = "2021"
description = "Video trimmer with mpv preview and DNxHD export"
license = "MIT"
authors = ["yinguobing <yinguobing@gmail.com>"]

[[bin]]
name = "dnclip"
path = "src/main.rs"

[package.metadata.deb]
name = "dnclip"
section = "video"
priority = "optional"
maintainer = "yinguobing <yinguobing@gmail.com>"
copyright = "2026, yinguobing <yinguobing@gmail.com>"
depends = "libc6 (>= 2.34), libgcc-s1, libx11-6, libxcb1, libegl1, libgl1, libgtk-3-0, mpv"
extended-description = """\
A video trimmer with mpv preview and DNxHD export.
Preview video with mpv, set in/out points,
and export to DNxHD format."""

maintainer-scripts = "debian/"

assets = [
    "$auto",
    ["assets/icon_256.png", "usr/share/icons/hicolor/256x256/apps/dnclip.png", "644"],
    ["assets/icon_32.png", "usr/share/icons/hicolor/32x32/apps/dnclip.png", "644"],
    ["assets/dnclip.desktop", "usr/share/applications/dnclip.desktop", "644"],
]

[dependencies]
eframe = "0.34"
egui = "0.34"
egui-file-dialog = "0.13"
egui_alignments = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
raw-window-handle = "0.6"
log = "0.4"
env_logger = "0.11"
x11-dl = "2"
